# forge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LLD_ AI-Integrated SDLC Orchestrator (Full Lifecycle).md  README.md  constitution.md  docker-compose.yml  mcp-servers.json  prometheus.yml  pyproject.toml
.claude/: settings.local.json  skills
.claude/skills/speckit-superb-clarify/: SKILL.md
.claude/skills/speckit-superb-critique/: SKILL.md
.claude/skills/speckit-superb-debug/: SKILL.md
.claude/skills/speckit-superb-finish/: SKILL.md
.claude/skills/speckit-superb-respond/: SKILL.md
.claude/skills/speckit-superb-review/: SKILL.md
.claude/skills/speckit-superb-tdd/: SKILL.md
.claude/skills/speckit-superb-verify/: SKILL.md
.claude/skills/speckit-sync-analyze/: SKILL.md
.claude/skills/speckit-sync-apply/: SKILL.md
.claude/skills/speckit-sync-backfill/: SKILL.md
.claude/skills/speckit-sync-conflicts/: SKILL.md
.claude/skills/speckit-sync-drift/: SKILL.md
.claude/skills/speckit-sync-propose/: SKILL.md
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/extensions/superb/: CHANGELOG.md  LICENSE  README.md  extension.yml  superb-config.template.yml
.specify/extensions/sync/: extension.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/presets/.cache/: catalog-ff86b51b80a289e5-metadata.json  catalog-ff86b51b80a289e5.json  catalog-metadata.json  catalog.json
.specify/sync/: align-tasks.md  apply-report.json  apply-report.md  drift-report.json  drift-report.md  proposals.json  proposals.md
containers/: Containerfile  README.md  entrypoint.py
devtools/: README.md  docker-compose.dev.yml  prometheus.dev.yml
docs/: developer-guide.md  retry-logic-analysis.md  workflow-graph.mmd
docs/plans/: dynamic-skill-loading.md
docs/superpowers/plans/: 2026-04-14-pluggable-workflows.md  2026-04-15-qa-mode-for-artifacts.md
docs/superpowers/specs/: 2026-04-14-pluggable-workflows-design.md
plugins/forge-sdlc/: plugin.json
plugins/forge-sdlc/prompts/: epic.md  prd.md  spec.md
plugins/forge-sdlc/templates/: epic-template.md  prd-template.md  spec-template.md
proposals/: 001-qa-mode-for-generated-artifacts.md  002-workflow-status-updates-in-jira.md  003-retryable-blocked-state.md  004-dynamic-skill-loading.md  005-ci-gate-skip-command.md  006-ci-fix-pr-description-sync.md  007-implement-review-node.md  008-stable-pr-to-ticket-association.md  009-langwatch-integration.md  README.md  TEMPLATE.md  retryable-blocked-state.md
scripts/: create-test-feature.py  patch_checkpoint.py
skills/context-gathering/: SKILL.md
skills/epic-generation/: SKILL.md
skills/feedback-incorporation/: SKILL.md
skills/jira-integration/: SKILL.md
skills/plan-generation/: SKILL.md
skills/prd-generation/: SKILL.md
skills/quality-validation/: SKILL.md
skills/research-discovery/: SKILL.md
skills/spec-generation/: SKILL.md
specs/001-ai-sdlc-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-sdlc-orchestrator/checklists/: requirements.md
specs/001-ai-sdlc-orchestrator/contracts/: jira-integration.md  webhook-api.md
src/forge/: __init__.py  cli.py  config.py  main.py
src/forge/api/: __init__.py  dependencies.py
src/forge/core/: __init__.py  config.py  logging.py
src/forge/integrations/: __init__.py
src/forge/models/: __init__.py  artifacts.py  events.py  workflow.py
src/forge/nodes/: __init__.py
src/forge/observability/: __init__.py  config.py  context.py
src/forge/orchestrator/: __init__.py  checkpointer.py  graph.py  state.py  worker.py
src/forge/prompts/: __init__.py
src/forge/queue/: __init__.py  consumer.py  models.py  producer.py  retry.py
src/forge/sandbox/: __init__.py  config.py  runner.py
src/forge/schemas/: __init__.py  state.py  webhook.py
src/forge/utils/: __init__.py  logging.py  rate_limiter.py  retry.py  shutdown.py
src/forge/workers/: __init__.py
src/forge/workflow/: __init__.py  base.py  registry.py  router.py  utils.py
src/forge/workspace/: __init__.py  git_ops.py  guardrails.py  manager.py
tests/: __init__.py  conftest.py  test_sandbox_runner.py
tests/contracts/: __init__.py  test_github_contracts.py  test_jira_contracts.py
tests/contracts/fixtures/: __init__.py
tests/e2e/: test_feature_workflow_e2e.py
tests/fixtures/: __init__.py  github_payloads.py  jira_payloads.py  workflow_states.py
tests/flows/: __init__.py  conftest.py
tests/flows/approval_gates/: __init__.py
tests/flows/bug_workflow/: __init__.py  test_complete_bug_flow.py
tests/flows/ci_recovery/: __init__.py  test_ci_failure_and_fix.py
tests/flows/error_recovery/: __init__.py  test_blocked_and_retry.py
tests/flows/feature_workflow/: __init__.py  test_complete_feature_flow.py
tests/integration/: __init__.py  conftest.py  test_qa_mode.py
tests/payloads/: 01-feature-created.json  02-prd-revision-requested.json  03-prd-approved.json  04-spec-revision-requested.json  05-spec-approved.json  06-plan-revision-requested.json  07-plan-approved.json  08-task-revision-requested.json  09-task-approved.json  10-prd-question.json  11-spec-question.json  12-forge-ask-question.json  13-plan-question.json  14-task-question.json  15-rca-question.json  README.md
tests/unit/: conftest.py  test_config.py
(+190 files in other folders)
