[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.1.0"
description = "AI-powered SDLC orchestration system for automated planning workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Forge Team", email = "team@example.com"},
]
keywords = ["ai", "sdlc", "orchestration", "jira", "langgraph", "forge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Task queue
    "celery>=5.3.0",
    "redis>=5.0.0",

    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=1.0.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-mcp>=0.1.0",

    # Jira MCP integration
    "mcp>=0.9.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "fakeredis>=2.21.0",
]

[project.scripts]
forge-api = "forge.api.main:main"
forge-worker = "forge.workers.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/forge --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/forge"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
